--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
-  "name": "madari",
-  "packageManager": "yarn@4.5.1"
+  "name": "@madari/root",
+  "packageManager": "yarn@4.5.1",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
+    "jotai": "^2.10.1"
+  }
 }
