--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@vidstack/react": "^1.12.12",
     "baseui": "0.0.0-next-18f01efe0",
+    "jotai-effect": "^1.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "maverick.js": "^0.43.2",
