--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vidstack/react": "^1.12.12",
+    "@vitejs/plugin-legacy": "^5.4.3",
     "baseui": "0.0.0-next-18f01efe0",
     "framer-motion": "^11.11.11",
     "jotai-effect": "^1.0.3",
