--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -15,6 +15,7 @@
     "compile:all": "yarn compile.en && yarn compile.mr"
   },
   "dependencies": {
+    "@noriginmedia/norigin-spatial-navigation": "^2.2.1",
     "@vidstack/react": "^1.12.12",
     "@vitejs/plugin-legacy": "^5.4.3",
     "baseui": "0.0.0-next-18f01efe0",
