--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -19,6 +19,7 @@
     "@vidstack/react": "^1.12.12",
     "@vitejs/plugin-legacy": "^5.4.3",
     "baseui": "0.0.0-next-18f01efe0",
+    "dashjs": "^4.7.4",
     "framer-motion": "^11.11.11",
     "jotai-effect": "^1.0.3",
     "lodash": "^4.17.21",
