--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-legacy": "^5.4.3",
     "baseui": "0.0.0-next-18f01efe0",
     "dashjs": "^4.7.4",
+    "dompurify": "^3.1.7",
     "framer-motion": "^11.11.11",
     "jotai-effect": "^1.0.3",
     "lodash": "^4.17.21",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@formatjs/cli": "^6.3.5",
+    "@types/dompurify": "^3",
     "@types/lodash": "^4",
     "@types/node": "^22.8.5",
     "@types/pako": "^2",
