--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -30,6 +30,7 @@
     "pako": "^2.1.0",
     "puppeteer": "10.0.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-intl": "^6.8.4",
@@ -53,6 +54,7 @@
     "@types/node": "^22.8.5",
     "@types/pako": "^2",
     "@types/react": "^18.3.12",
+    "@types/react-beautiful-dnd": "^13",
     "@types/react-dom": "^18.3.1",
     "@types/react-window": "^1",
     "@types/react-window-infinite-loader": "^1",
