--- a/.github/workflows/build-dmg.yml
+++ b/.github/workflows/build-dmg.yml
@@ -9,33 +9,10 @@ on:
 
 jobs:
   build:
-    runs-on: macos-14
+    runs-on: macos-15
 
     steps:
-      - uses: actions/checkout@v3
-
-      # Use Xcode 15.4 explicitly
-      - name: Select Xcode 15.4
-        run: sudo xcode-select -s /Applications/Xcode_15.4.app
-
-      - name: Check versions
-        run: |
-          xcodebuild -version
-          swift --version
-
-      # Temporarily downgrade Swift version in Package.swift files
-      - name: Update Swift version in packages
-        run: |
-          find . -name "Package.swift" -type f -exec sed -i '' '1s/swift-tools-version:6.0.0/swift-tools-version:5.10.0/' {} +
-          
-          # Show all Package.swift versions
-          echo "Modified Package.swift files:"
-          find . -name "Package.swift" -type f -exec head -n 1 {} \;
-
-      - name: Clean
-        run: |
-          rm -rf ~/Library/Developer/Xcode/DerivedData
-          rm -rf ~/.build
+      - uses: actions/checkout@v4
 
       - name: Build App
         run: |
@@ -55,8 +32,9 @@ jobs:
             "madari.dmg"
           rm -rf /tmp/dmg
 
+      # Upload the DMG as an artifact
       - name: Upload DMG
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: madari
           path: madari.dmg
