added ipa version for the ipa

--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-15
     outputs:
       ipa_path: ${{ steps.ipa_info.outputs.ipa_path }}
     steps:
